[package]
name = "esp_rtic_template"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rtic = {git = "https://github.com/onsdagens/rtic", features = ["riscv-esp32c3-backend"]}
esp-hal = { version = "0.16.1", features = ["esp32c3", "direct-vectoring", "interrupt-preemption"] }
esp-backtrace = { version = "0.11.0", features = [
    "esp32c3",
    "panic-handler",
    "exception-handler",
    "println",
] }

esp32c3 = {version = "0.21.0", features = ["critical-section"]}
esp-println = { version = "0.9.0", features = ["esp32c3", "uart"] }
